[gd_scene load_steps=15 format=3 uid="uid://bawgcpe4clkdo"]

[ext_resource type="Script" path="res://enemies/test_zone/test01/enemy.gd" id="1_vnqx7"]
[ext_resource type="Texture2D" uid="uid://cirgyej8vtrrl" path="res://enemies/test_zone/test01/wizard.png" id="2_tv2w5"]
[ext_resource type="Script" path="res://components/health.gd" id="3_rqnin"]
[ext_resource type="Script" path="res://components/damageable.gd" id="4_4fuy7"]
[ext_resource type="Script" path="res://scripts/nav/overlapping_nav_agent_3d.gd" id="5_6xoju"]
[ext_resource type="Script" path="res://enemies/state_machine/enemy_state_machine.gd" id="5_37b4f"]
[ext_resource type="Script" path="res://enemies/state_machine/wander.gd" id="6_brwbg"]
[ext_resource type="Script" path="res://enemies/state_machine/chase_line_of_sight.gd" id="8_0b8kw"]
[ext_resource type="Script" path="res://enemies/state_machine/chase_last_position.gd" id="9_scf73"]
[ext_resource type="Script" path="res://enemies/spawners/projectile_spawner.gd" id="10_ef2k6"]
[ext_resource type="PackedScene" uid="uid://jr7h7x8hwhpb" path="res://enemies/projectiles/laser01.tscn" id="11_mseqg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3hm6u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tv2w5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_fhpkm"]
radius = 0.4
height = 1.405

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vtf4t"]
height = 0.8
radius = 0.315262

[node name="Test01" type="CharacterBody3D" node_paths=PackedStringArray("navigation", "state_machine") groups=["Enemies"]]
collision_layer = 4
axis_lock_linear_y = true
script = ExtResource("1_vnqx7")
navigation = NodePath("NavigationAgent3D")
state_machine = NodePath("EnemyStateMachine")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
offset = Vector2(0, 30)
pixel_size = 0.02
billboard = 1
double_sided = false
no_depth_test = true
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_3hm6u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="AnimatedSprite3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.767171, 0)
cast_shadow = 3
mesh = SubResource("CapsuleMesh_fhpkm")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
shape = SubResource("CylinderShape3D_vtf4t")

[node name="Health" type="Node" parent="."]
script = ExtResource("3_rqnin")
health = 2
max_health = 2

[node name="Damageable" type="Node" parent="."]
script = ExtResource("4_4fuy7")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.3
target_desired_distance = 0.3
path_height_offset = 0.5
path_max_distance = 0.61
path_metadata_flags = 0
avoidance_enabled = true
neighbor_distance = 10.0
max_speed = 1.0
script = ExtResource("5_6xoju")

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("5_37b4f")

[node name="Wander" type="Node" parent="EnemyStateMachine"]
script = ExtResource("6_brwbg")

[node name="ChaseLineOfSight" type="Node" parent="EnemyStateMachine"]
script = ExtResource("8_0b8kw")

[node name="ChaseLastPosition" type="Node" parent="EnemyStateMachine"]
script = ExtResource("9_scf73")

[node name="AttackTimer" type="Timer" parent="."]

[node name="ProjectileSpawner" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.526207, 0)
script = ExtResource("10_ef2k6")
projectile = ExtResource("11_mseqg")

[connection signal="player_spotted" from="EnemyStateMachine/Wander" to="EnemyStateMachine/ChaseLineOfSight" method="enter"]
[connection signal="entered" from="EnemyStateMachine/ChaseLineOfSight" to="AttackTimer" method="start"]
[connection signal="exited" from="EnemyStateMachine/ChaseLineOfSight" to="AttackTimer" method="stop"]
[connection signal="lost_player" from="EnemyStateMachine/ChaseLineOfSight" to="EnemyStateMachine/ChaseLastPosition" method="enter"]
[connection signal="lost_player" from="EnemyStateMachine/ChaseLastPosition" to="EnemyStateMachine/Wander" method="enter"]
[connection signal="player_spotted" from="EnemyStateMachine/ChaseLastPosition" to="EnemyStateMachine/ChaseLineOfSight" method="enter"]
[connection signal="timeout" from="AttackTimer" to="ProjectileSpawner" method="spawn"]
